View GRN Responsive Done and Submit Bid Address and PO address Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -12,8 +12,8 @@
               <div class="row">
                    <div class="col-xs-3 image-small-screen">
                      <div>
-                        <img style="width:100%" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl" alt="project image" />
-                        <img style="width:100%"  *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
+                        <img class="image-project-card" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl" alt="project image" />
+                        <img  *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
                      </div>
                     </div>
                     <div class="col-xs-9">
