--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -494,3 +494,7 @@ body,
   .mat-button-focus-overlay {
     background-color: transparent!important;
 }
+.image-project-card{
+    width:100%;
+    border-radius: 5px;
+}
