--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -2,7 +2,7 @@
   <div class="p-b-20 grn-dashboard min-height parent">
     <div class="row p-t-20 ">
       <!-- <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div> -->
-      <div class="col-xs-6 text-semi-bold">PO Number: <span *ngIf="poData && poData.poNumber">
+      <div class="col-xs-6 text-semi-bold po-number-grn">PO Number: <span *ngIf="poData && poData.poNumber">
         {{ poData.poNumber }}
       </span></div>
       <div class="col-xs-6">
@@ -60,14 +60,14 @@
                       <ng-container matColumnDef="Awarded Quantity">
                         <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
                         <td mat-cell *matCellDef="let element" class="text-align-center">
-                          {{ element.materialQuantity }}
+                          {{ element.materialQuantity }}  {{ element.materialUnit }}
                         </td>
                       </ng-container>
 
                       <ng-container matColumnDef="Delivered Quantity">
                         <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
                         <td mat-cell *matCellDef="let element" class="text-align-center">
-                          {{ element.deliveredQty }}
+                          {{ element.deliveredQty }}  {{ element.materialUnit }}
                         </td>
                       </ng-container>
 
