--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -132,7 +132,15 @@ input {
   padding: 0px 18px;
   font-weight: 600;
 }
-
+@media only screen and (max-width: 576px){
+  .main-button.mat-button-base {
+  border: 2px solid $main-color !important;
+  min-width: 95px;
+  border-radius: 25px;
+  padding: 0px 12px;
+  font-weight: 500;
+}
+}
 .text-bold {
   font-weight: 800;
 }
@@ -149,6 +157,9 @@ input {
 }
 .font-size10 {
   font-size: 10px;
+}
+.font-size11{
+  font-size: 11px;
 }
 .font-size12 {
   font-size: 12px;
@@ -274,6 +285,77 @@ a:hover {
   padding-top: 15px !important;
   padding-bottom: 0px !important;
 }
+.add-grn-popup.mat-form-field-appearance-legacy .mat-form-field-wrapper{
+   padding-top: 0px !important;
+}
+
+@media only screen and (max-width: 576px){
+  .add-grn-responsive-div{
+    position: relative;
+    width: 110%;
+    left: -5%;
+}
+}
+
+ .add-grn-responsive-div{
+  max-height: 400px;
+  overflow-y: scroll;
+  .add-edit-grn-popup-accordian.mat-accordion {
+  .mat-expansion-panel-header{
+    min-height: 72px;
+    background: #F3F3F3;
+  }
+
+    .mat-form-field {
+       text-align: left;
+        position: absolute;
+        top: 12%;
+        left:0%;
+    }
+      .mat-form-field-infix {
+        display: block;
+        position: relative;
+        flex: auto;
+        min-width: 0;
+        width: 112px;
+        font-size: 12px;
+    }
+    .myPanel .mat-expansion-panel-body{
+      background: #FAFAFA;
+    }
+    .mat-expansion-panel-header{
+      padding:0 5px;
+    }
+}
+  }
+
+  @media only screen and (min-width: 576px){
+    .add-grn-responsive-div{
+        max-height: 400px;
+        overflow-y: scroll;
+        .add-edit-grn-popup-accordian.mat-accordion {
+        .mat-expansion-panel-header{
+          min-height: 72px;
+          background: #F3F3F3;
+        }
+
+          .mat-form-field {
+            text-align: left;
+              position: absolute;
+              top: 12%;
+              left: 12%;
+              width: 100%;
+          }
+            .mat-form-field-infix {
+              font-size: 14px;
+          }
+
+      }
+        }
+  }
+
+
+
 
 .input-search-padding-zero.mat-form-field-appearance-legacy .mat-form-field-wrapper {
   padding-top: 0px !important;
@@ -594,4 +676,9 @@ mat-accordion {
 }
 .word-break-word{
   word-break: break-word;
+}
+
+.max-width-of-select-address{
+   max-width: 100%;
+   white-space: pre-line;
 }
