User Screen Responsive Done and Date Arrows Fixed for responsive and Image Class added Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -682,3 +682,10 @@ mat-accordion {
    max-width: 100%;
    white-space: pre-line;
 }
+
+
+.mat-calendar-controls{
+  .mat-icon-button{
+   width: 40px !important;
+  }
+}
