--- a/src/assets/scss/pages/dashboard.scss
+++ b/src/assets/scss/pages/dashboard.scss
@@ -406,6 +406,10 @@ body,
                  font-size: 15px !important;
              }
         }
+          .users-dashboard{
+             padding-left: 20px;
+          padding-right: 20px;
+        }
          .back-btn-grn{
             display: block;
         }
@@ -432,6 +436,10 @@ body,
               .add-project-btn{
                  padding-top: 10px;
              }
+        }
+        .users-dashboard{
+             padding-left: 7px;
+          padding-right: 7px;
         }
           .grn-dashboard{
              padding-left: 7px;
