--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -234,6 +234,17 @@ s .validTill {
       font-size: 12px;
     }
   }
+  .add-user-container{
+     .mat-cell,
+    .mat-header-cell {
+      font-size: 12px;
+    }
+    .project-user-details-width{
+      button{
+        font-size: 12px;
+    }
+  }
+  }
   .po-number-grn{
     font-size: 14px;
   }
