--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -17,30 +17,25 @@
   </ng-container>
 
   <ng-container *ngIf="dataSourceActivateTemp.length > 0 || dataSourceDeactivateTemp.length > 0">
-    <div class="row" class="p-l-20 p-r-20 p-b-20 min-height parent">
-      <!-- <div class="text-right add-user-details-button-right">
-        <button mat-raised-button (click)="addUser()"
-          class="main-background-color main-button color-white">
-          Add User
-        </button>
-      </div> -->
+    <div class="row" class="users-dashboard p-b-20 min-height parent">
       <div class="row">
-        <div class="col-xs-3">
-          <mat-form-field class="example-form-field border-input p-l-20">
-            <input matInput placeholder="Search Users" type="search" (keyup)="applyFilter($event.target.value)" />
+      <div class="col-xs-7">
+        <mat-form-field class="example-form-field border-input project">
+           <input matInput placeholder="Search Users" type="search" (keyup)="applyFilter($event.target.value)" />
             <button mat-button matSuffix mat-icon-button>
               <mat-icon>search</mat-icon>
             </button>
-          </mat-form-field>
-        </div>
-        <div class="col-xs-9">
-          <div class="text-right add-user-details-button-right p-t-10 p-r-20">
-            <button mat-raised-button (click)="addUser()" class="main-background-color main-button color-white add-user-button">
+        </mat-form-field>
+      </div>
+      <div class="text-right col-xs-5 p-t-10 add-project-btn">
+        <!-- <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
+          + Add Project
+        </button> -->
+         <button mat-raised-button (click)="addUser()" class="main-background-color main-button color-white demo-title">
               Add User
             </button>
-          </div>
-        </div>
       </div>
+    </div>
 
       <ng-container *ngIf="dataSourceActivateTemp.length > 0" class="user-dts">
         <mat-expansion-panel class="myPanel" [expanded]="true">
@@ -51,12 +46,8 @@
               </div>
             </div>
           </mat-expansion-panel-header>
-          <!-- first table structure -->
-          <div class="row">
-            <!-- <div class="col-sm-12"> -->
-            <!-- table structure -->
-            <div class="user-details-table-div-active-inactive-single">
-              <table mat-table [dataSource]="dataSourceActivate" class="mat-elevation-z8 col-sm-12">
+            <div class="add-user-container mat-elevation-z8 user-details-table-div-active-inactive-single">
+              <table mat-table [dataSource]="dataSourceActivate">
                 <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
@@ -103,7 +94,7 @@
                   </td>
                 </ng-container>
 
-                <ng-container matColumnDef="star" stickyEnd>
+                <ng-container matColumnDef="star">
                   <th mat-header-cell *matHeaderCellDef class="edit-disable-user-details-width"></th>
                   <td mat-cell *matCellDef="let element" class="edit-disable-user-details-width">
                     <mat-icon *ngIf="element.ProjectUser.isAccountOwner == 0" aria-hidden="false" (click)="deactivateUser(element)">
@@ -124,9 +115,6 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
               </table>
             </div>
-            <!-- end structure -->
-            <!-- </div> -->
-          </div>
         </mat-expansion-panel>
       </ng-container>
       <p></p>
@@ -142,12 +130,8 @@
               </div>
             </div>
           </mat-expansion-panel-header>
-          <!-- first table structure -->
-          <div class="row">
-            <!-- <div class="col-sm-12"> -->
-            <!-- table structure -->
-            <div  class="user-details-table-div-active-inactive-single">
-              <table mat-table [dataSource]="dataSourceDeactivate" class="mat-elevation-z8 col-sm-12">
+            <div  class="add-user-container mat-elevation-z8 user-details-table-div-active-inactive-single">
+              <table mat-table [dataSource]="dataSourceDeactivate">
                 <!--- Note that these columns can be defined in any order.
                   The actual rendered columns are set as a property on the row definition" -->
 
@@ -205,9 +189,6 @@
                 <tr mat-row *matRowDef="let row; columns: displayedColumnsDeactivate"></tr>
               </table>
             </div>
-            <!-- end structure -->
-            <!-- </div> -->
-          </div>
         </mat-expansion-panel>
       </ng-container>
     </div>
