--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -13,7 +13,7 @@
                    <div class="col-xs-3 image-small-screen">
                      <div>
                         <img class="image-project-card" *ngIf="projectDetails.imageUrl" [src]="projectDetails.imageUrl" alt="project image" />
-                        <img  *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
+                        <img class="image-project-card" *ngIf="!projectDetails.imageUrl" [src]="'../../../../assets/images/project-default-image.png'" alt="project image" />
                      </div>
                     </div>
                     <div class="col-xs-9">
