--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -50,8 +50,8 @@
           <th *matHeaderCellDef class="first-column-row-header">
             Material Name
           </th>
-          <td class="text-left" mat-cell *matCellDef="let element">
-            <mat-checkbox #ch (change)="getElemenetChecked(ch, element)" [checked]="element.checked">
+          <td class="text-left" mat-cell *matCellDef="let element" [ngClass]="[element.materialCustomFlag && element.isApproved ? 'background-color-light-grey' : '']">
+            <mat-checkbox #ch (change)="getElemenetChecked(ch, element)" [checked]="element.checked" [disabled]="element.materialCustomFlag && element.isApproved">
               <div class="limited-character bom" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
               <div class="limited-character bom" matTooltip=" {{ element.materialGroup }}">
                 <span class="category-name">
@@ -66,25 +66,31 @@
           <th *matHeaderCellDef class="text-align-center justify-center">
             Unit
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.materialUnit }}</td>
+          <td class="text-align-center" mat-cell *matCellDef="let element" [ngClass]="[element.materialCustomFlag && element.isApproved ? 'background-color-light-grey' : '']">
+            {{ element.materialUnit }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="estimatedQty">
           <th *matHeaderCellDef class="text-align-center justify-center">
             Estimated Quantity
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
+          <td class="text-align-center" mat-cell *matCellDef="let element" [ngClass]="[element.materialCustomFlag && element.isApproved ? 'background-color-light-grey' : '']">
+            {{ element.estimatedQty }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="indentedQuantity">
           <th *matHeaderCellDef class="text-align-center justify-center">
             Indented Quantity
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }}</td>
+          <td class="text-align-center" mat-cell *matCellDef="let element" [ngClass]="[element.materialCustomFlag && element.isApproved ? 'background-color-light-grey' : '']">
+            {{ element.requestedQuantity }}
+          </td>
         </ng-container>
         <ng-container matColumnDef="issueToProject">
           <th *matHeaderCellDef class="text-align-center justify-center">
             Issued To Project
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element">
+          <td class="text-align-center" mat-cell *matCellDef="let element" [ngClass]="[element.materialCustomFlag && element.isApproved ? 'background-color-light-grey' : '']">
             <ng-container *ngIf="element.issueToProject; else showZEroDataIP"> {{ element.issueToProject }}</ng-container>
             <ng-template #showZEroDataIP> 0 {{ element.materialUnit }} </ng-template>
           </td>
@@ -93,7 +99,13 @@
           <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag" class="text-align-center justify-center">
             Available In Stock
           </th>
-          <td class="text-align-center" mat-cell [hidden]="!permissionObj.rfqFlag" *matCellDef="let element">
+          <td
+            class="text-align-center"
+            mat-cell
+            [hidden]="!permissionObj.rfqFlag"
+            *matCellDef="let element"
+            [ngClass]="[element.materialCustomFlag && element.isApproved ? 'background-color-light-grey' : '']"
+          >
             <ng-container *ngIf="element.availableStock; else showZEroData"> {{ element.availableStock }} {{ element.materialUnit }} </ng-container>
             <ng-template #showZEroData> 0 {{ element.materialUnit }} </ng-template>
           </td>
@@ -101,37 +113,49 @@
 
         <ng-container matColumnDef="customColumn">
           <th *matHeaderCellDef></th>
-          <td class="text-right p-b-20" mat-cell *matCellDef="let element">
+          <td class="text-right p-b-20" mat-cell *matCellDef="let element" [ngClass]="[element.materialCustomFlag && element.isApproved ? 'background-color-light-grey' : '']">
             <!-- <a>
               <mat-icon>edit</mat-icon>
             </a> -->
+            <button class="button-display-none" [disabled]="element.materialCustomFlag && element.isApproved">
+              <a (click)="issueToIndent(element.materialId, projectId)" class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon" matTooltip="Issue to Indent">
+                <img
+                  [src]="
+                    permissionObj.rfqFlag && (element.availableStock === 0 || element.availableStock === null)
+                      ? '../../../../assets/images/issue_to_indent_disabled.png'
+                      : '../../../../assets/images/issue_to_indent.png'
+                  "
+                />
+              </a>
+            </button>
 
-            <a
-              *ngIf="permissionObj.rfqFlag && !(element.availableStock === 0 || element.availableStock === null)"
-              (click)="issueToIndent(element.materialId, projectId)"
-              class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon"
-              matTooltip="Issue to Indent"
-            >
-              <img src="../../../../assets/images/issue_to_indent.png" />
-            </a>
-
-            <a *ngIf="permissionObj.rfqFlag && (element.availableStock === 0 || element.availableStock === null)" class="width-15-px p-r-10 issue-to-indent-icon">
+            <!-- <a *ngIf="permissionObj.rfqFlag && (element.availableStock === 0 || element.availableStock === null)" class="width-15-px p-r-10 issue-to-indent-icon">
               <img src="../../../../assets/images/issue_to_indent_disabled.png" />
-            </a>
+            </a> -->
+            <button class="button-display-none" [disabled]="element.materialCustomFlag && element.isApproved">
+              <a
+                class="width-15-px p-l-5 cursor-pointer"
+                matTooltip="Delete"
+                *ngIf="
+                  (element.requestedQuantity === 0 || element.requestedQuantity === null) &&
+                  (element.availableStock === 0 || element.availableStock === null) &&
+                  (element.issueToProject === 0 || element.issueToProject === null)
+                "
+                (click)="deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)"
+              >
+                <img
+                  [src]="
+                    (element.requestedQuantity === 0 || element.requestedQuantity === null) &&
+                    (element.availableStock === 0 || element.availableStock === null) &&
+                    (element.issueToProject === 0 || element.issueToProject === null)
+                      ? '../../../../assets/images/delete-button.png'
+                      : '../../../../assets/images/delete-button_disable.png'
+                  "
+                />
+              </a>
+            </button>
 
-            <a
-              class="width-15-px p-l-5 cursor-pointer"
-              matTooltip="Delete"
-              *ngIf="
-                (element.requestedQuantity === 0 || element.requestedQuantity === null) &&
-                (element.availableStock === 0 || element.availableStock === null) &&
-                (element.issueToProject === 0 || element.issueToProject === null)
-              "
-              (click)="deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)"
-            >
-              <img src="../../../../assets/images/delete-button.png" />
-            </a>
-            <a
+            <!-- <a
               class="width-15-px p-l-5"
               *ngIf="
                 !(
@@ -142,7 +166,7 @@
               "
             >
               <img src="../../../../assets/images/delete-button_disable.png" />
-            </a>
+            </a> -->
           </td>
         </ng-container>
 
