--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -50,6 +50,7 @@
   mat-option.mat-option {
     white-space: normal !important;
     line-height: normal !important;
+    // overflow: auto;
   }
 }
 
