--- a/src/app/shared/dialogs/add-my-material/add-my-material.component.html
+++ b/src/app/shared/dialogs/add-my-material/add-my-material.component.html
@@ -28,10 +28,7 @@
               <!-- myMaterial.controls.myMaterial.controls.email.errors -->
             </div>
             <div class="col-xs-1 text-right p-l-0 p-r-0">
-              <mat-form-field
-                class="border-select width-90 mat-form-field-infix-padding mat-select-placeholder-padding mat-form-field-flex-padding mat-form-field-padding"
-                style="padding-top: 6px;"
-              >
+              <mat-form-field class="border-select width-90 mat-form-field-flex-top-padding" style="padding-top: 6px;">
                 <mat-select placeholder="*Unit" formControlName="materialUnit">
                   <mat-option *ngFor="let unit of materialUnit" [value]="unit">
                     <span>
@@ -56,10 +53,7 @@
               </span>
             </div>
             <div class="col-xs-2">
-              <mat-form-field
-                class="border-select width-90 mat-form-field-flex-padding mat-form-field-padding mat-form-field-infix-padding mat-select-placeholder-padding"
-                style="padding-top: 6px;"
-              >
+              <mat-form-field class="border-select width-90 mat-form-field-flex-top-padding">
                 <mat-label>Trade</mat-label>
                 <mat-select formControlName="trade">
                   <mat-option *ngFor="let trade of tradesList" [value]="trade">
@@ -71,7 +65,7 @@
             <div class="col-xs-2">
               <mat-form-field class="border-input width-90">
                 <input type="text" placeholder="Category" matInput formControlName="category" [matAutocomplete]="auto" />
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" class="mat-option-alignment">
+                <mat-autocomplete #auto="matAutocomplete" matTooltip=" {{ option.categoriesName }}" [displayWith]="displayFn">
                   <mat-option *ngFor="let option of this.filterOptions | async" [value]="option">
                     {{ option.categoriesName }}
                   </mat-option>
