--- a/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -39,15 +39,30 @@
                       </span>
                     </div>
                     <div class="col-xs-2 text-right">
-                      <mat-form-field class="border-select shortWidth mat-form-field-flex-top-padding">
-                        <mat-select formControlName="materialUnit" placeholder="Unit">
-                          <mat-option *ngFor="let unit of materialUnit" [value]="unit">
-                            <span>
-                              {{ unit }}
-                            </span>
-                          </mat-option>
-                        </mat-select>
-                      </mat-form-field>
+                      <span
+                        *ngIf="
+                          (subcategory.requestedQuantity === 0 || subcategory.requestedQuantity === null) &&
+                            (subcategory.availableStock === 0 || subcategory.availableStock === null) &&
+                            (subcategory.issueToProject === 0 || subcategory.issueToProject === null);
+                          else elseBlock
+                        "
+                        formControlName="materialUnit"
+                      >
+                        <mat-form-field class="border-select shortWidth mat-form-field-flex-top-padding">
+                          <mat-select formControlName="materialUnit" placeholder="Unit">
+                            <mat-option *ngFor="let unit of materialUnit" [value]="unit">
+                              <span>
+                                {{ unit }}
+                              </span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </span>
+                      <ng-template #elseBlock>
+                        <div class="p-r-35 p-t-15">
+                          {{ subcategory.materialUnit }}
+                        </div>
+                      </ng-template>
                     </div>
                     <div class="col-xs-2 text-center p-l-25">
                       <span>
