--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -83,7 +83,7 @@
       <div *ngIf="!showtable" formArrayName="forms" class="add-grn-responsive-div">
         <ng-container *ngFor="let data of dataSource; let i=index">
              <mat-accordion class="add-edit-grn-popup-accordian">
-                <mat-expansion-panel class="myPanel" [expanded]="false">
+                <mat-expansion-panel class="myPanel" [expanded]="true">
                   <mat-expansion-panel-header>
                     <mat-panel-title>
                       <div class="row width100Percent">
