--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -43,21 +43,20 @@
       </div>
       <app-po-table #poTable *ngIf="tableData.length" (QuantityAmountValidation)=QuantityAmountValidation($event) [poTableData]="tableData"> </app-po-table>
     </div>
-    <div class="doc-froala-div">
-      <div class="row">
-        <div class="col-sm-4">
+
+      <div class="row doc-froala-div">
+        <div class="col-sm-12 col-md-4">
           <app-po-documents #poDocument [documentData]="documentList"></app-po-documents>
         </div>
-        <div class="col-sm-8 hidePoweredBy" *ngIf="mode === 'edit'">
+        <div class="col-sm-12 col-md-8 hidePoweredBy" *ngIf="mode === 'edit'">
           <form [formGroup]="poTerms">
             <textarea formControlName="textArea" [innerHTML]="terms && terms.termsDesc" [froalaEditor]="froala" [(froalaModel)]="poTerms['textArea']">Hello, Froala!</textarea>
           </form>
         </div>
-        <div class="col-sm-8 background-white-color border-radius parent">
+        <div class="col-sm-12 col-md-8 background-white-color border-radius parent">
           <div class="word-wrap" *ngIf="mode !== 'edit' && this.terms && terms.termsDesc !== ''" [innerHTML]="terms.termsDesc"></div>
           <div class="center-element" *ngIf="mode !== 'edit' && this.terms && terms.termsDesc == ''">No Term To View</div>
         </div>
       </div>
     </div>
-  </div>
 </div>
