Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -88,7 +88,10 @@
                     <mat-panel-title>
                       <div class="row width100Percent">
                         <div class="col-xs-8 col-md-8 p-t-10 p-b-10 font-size-vary-grn">
-                          {{data.materialName}} 
+                          {{data.materialName}}  
+                          <div class="font-size10 color-brand">
+                              {{data.materialBrand}} 
+                          </div>
                           </div>
                         <div class="col-xs-4 col-md-4">
                            <mat-form-field [formGroupName]="i" class="border-input table-input add-grn-popup">
